refactor(place): fix patch merge and tighten the service layer
The PATCH handler had three defects. A payload without `days` threw an
NPE
on the unguarded stream, even though the validator accepts a patch
carrying
only a label. New slots were added straight to getDays(), so Hibernate
wrote them with a null place_id. And updateEntityFromPatch mapped the
collection despite the ignore, calling setDays before the merge ran and
duplicating the incoming slot. The merge now builds the list explicitly
and
hands it to setDays, which wires the back-reference on every entry.

Paging no longer returns Page.empty for an out-of-range index: that
reports
totalElements as 0, telling the client the table is empty.

deleteById runs inside a transaction so the existence check and the
delete
cannot be separated by a concurrent removal, and findById moved to the
write repository — with the entity graph — since update and patch both
read
in order to modify.

The grouped opening-hours endpoint dropped its second query: the entity
graph already brought the days along. Its two parallel maps collapsed
into
one keyed by the interval list, which also removes the chance of a comma
inside an interval colliding two different schedules. Patch updates are
indexed by id instead of scanned per entry.